syntax = "proto3";
package admin;
option go_package = ".;mall";

import "portal/portal.proto";

import "validate/validate.proto";
import "google/api/annotations.proto";
import "google/protobuf/wrappers.proto";



message SearchProductReq {
  // 条件
  string keyword = 1;             // 关键词
  google.protobuf.UInt64Value brandId = 2;             // 品牌ID
  google.protobuf.UInt64Value productCategoryId = 3;   // 商品分类ID
  // 分页排序
  uint32 page_num = 10 [(validate.rules).uint32.gte = 0]; //
  uint32 page_size = 11 [(validate.rules).uint32.gte = 0]; //
  uint32 sort = 12 [(validate.rules).uint32 = {in: [0, 1, 2, 3, 4]}];      // 排序字段:0->按相关度；1->按新品；2->按销量；3->价格从低到高；4->价格从高到低
}

message SearchProductRsp {
  // 商品列表
  message Product {
    uint64 id = 1; // 主键
    string pic = 31; // 图片
    string name = 3; // 商品名称
    string sub_title = 4; // 副标题
    string price = 8; // 价格
    uint32 sale = 38; // 销量
  }

  repeated Product data = 1;    // 商品

  uint32 total = 10;       // 总数量
  uint32 page_total = 11;  // 总页数
  uint32 page_size = 12;   // 每页的数量
  uint32 page_num = 13;    // 当前页数
}



message CategoryTreeItem {

}

message CategoryTreeListReq {

}

message CategoryTreeListRsp {
  uint32 code = 1;      // 状态码
  string message = 2;   // 提示信息

  repeated CategoryTreeItem data = 3;
}

message ProductDetailReq {
  uint64 id = 1 [(validate.rules).uint64.gte = 0]; // 主键
}




// 前台商品详情
message ProductDetailRsp {
  message Product {
    uint64 id = 1; // 主键
    repeated string album_pics = 32; // 画册图片，连产品图片限制为5张
    string pic = 31; // 图片
    string name = 3; // 商品名称
    string sub_title = 4; // 副标题
    string price = 8; // 价格
    string original_price = 9; // 市场价
    uint32 sale = 38; // 销量
    uint32 stock = 10; // 库存
    string service_ids = 21; // 以逗号分割的产品服务：1->无忧退货；2->快速退款；3->免费包邮
  }
  message Brand {
    string name = 2;                    // 名称
    string first_letter = 3;            // 首字母
    string logo = 9;                    // 品牌logo
  }

  message ProductAttribute {
    uint64 id = 1;                              // 编号
    uint32 type = 2;                            // 属性的类型；0->规格；1->参数
    uint64 product_attribute_category_id = 3;   // 产品属性分类表ID
    string name = 4;                            // 属性名称
    uint32 sort = 8;                            // 排序字段
    //
    uint32 select_type = 5;                     // 属性选择类型：0->唯一；1->单选；2->多选
    uint32 input_type = 6;                      // 属性录入方式：0->手工录入；1->从列表中选取
    string input_list = 7;                      // 可选值列表，以逗号隔开
    //
    uint32 filter_type = 9;                     // 分类筛选样式：1->普通；1->颜色
    uint32 search_type = 10;                    // 检索类型；0->不需要进行检索；1->关键字检索；2->范围检索
    //
    uint32 related_status = 11;                 // 相同属性产品是否关联；0->不关联；1->关联
    uint32 hand_add_status = 12;                // 是否支持手动新增；0->不支持；1->支持
  }

  message ProductAttributeValue {
    uint64 id = 1; // 主键ID
    uint64 product_id = 2; // 商品ID
    uint64 product_attribute_id = 3; // 商品属性ID
    string value = 4; // 手动添加规格或参数的值，参数单值，规格有多个时以逗号隔开
  }

  message SkuStock {
    uint64 id = 1; // 主键
    string sku_code = 3; // sku编码
    string pic = 7; // 展示图片
    uint32 sale = 8; // 销量
    string sp_data = 11; // 商品销售属性，json格式
    uint64 product_id = 2; // 产品ID
    // 价格
    string price = 4; // 价格
    string promotion_price = 9; // 单品促销价格
    // 库存
    uint32 stock = 5; // 库存
    uint32 low_stock = 6; // 预警库存
    uint32 lock_stock = 10; // 锁定库存
  }

  message ProductLadder {

  }

  message ProductFullReduction {

  }

  message Coupon {

  }

  Product product = 1;                                         // 商品信息
  Brand brand = 2;                                             // 商品品牌
  repeated ProductAttribute product_attributes = 3;            // 商品属性与参数
  repeated ProductAttributeValue product_attribute_values = 4; // 手动录入的商品属性与参数值
  repeated SkuStock sku_stocks = 5;                            // 商品的sku库存信息
  repeated ProductLadder product_ladders = 6;                  // 商品阶梯价格设置
  repeated ProductFullReduction product_full_reductions = 7;   // 商品满减价格设置
  repeated Coupon coupons = 8;                                 // 商品可用优惠券
}

// 客户端接口
service PortalProductApi {
  // 综合搜索商品
  rpc SearchProduct (SearchProductReq) returns (SearchProductRsp) {
    option (google.api.http) = {
      get: "/product/search"
    };
  }
  // 以树形结构获取所有商品分类
  rpc CategoryTreeList (CategoryTreeListReq) returns (CategoryTreeListRsp) {
    option (google.api.http) = {
      get: "/product/categoryTreeList"
    };
  }

  // 获取前台商品详情
  rpc ProductDetail (ProductDetailReq) returns (ProductDetailRsp) {
    option (google.api.http) = {
      get: "/product/detail/{id}"
    };
  }
}